@@ -1,12 +1,12 @@
-# Copyright 1999-2009 Gentoo Foundation
+# Copyright 1999-2010 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/media-libs/ilmbase/ilmbase-1.0.1.ebuild,v 1.10 2009/03/11 19:45:06 armin76 Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-libs/ilmbase/ilmbase-1.0.1.ebuild,v 1.11 2010/03/10 02:55:29 sping Exp $
 
 inherit libtool eutils
 
 DESCRIPTION="OpenEXR ILM Base libraries"
 HOMEPAGE="http://openexr.com/"
-SRC_URI="http://download.savannah.nongnu.org/releases/openexr/${P}.tar.gz"
+SRC_URI="http://download.savannah.gnu.org/releases/openexr/${P}.tar.gz"
 
 LICENSE="BSD"
 SLOT="0"
