@@ -1,6 +1,10 @@
 # ChangeLog for media-libs/ilmbase
-# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-libs/ilmbase/ChangeLog,v 1.16 2009/03/11 19:45:06 armin76 Exp $
+# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/media-libs/ilmbase/ChangeLog,v 1.17 2010/03/10 02:55:29 sping Exp $
+
+  10 Mar 2010; Sebastian Pipping <sping@gentoo.org> ilmbase-1.0.0.ebuild,
+  ilmbase-1.0.1.ebuild:
+  Fix SRC_URI (bug #262655)
 
   11 Mar 2009; Raúl Porcel <armin76@gentoo.org> ilmbase-1.0.1.ebuild:
   s390/sh stable
